--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-nestjs-prisma-v1",
+  "name": "crud-nestjs-prisma-v1",
   "version": "0.0.1",
   "description": "",
   "author": "",
